# supernote

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  ROADMAP.md  config-example.yaml  pyproject.toml  requirements_dev.txt
.github/: copilot-instructions.md
.github/workflows/: cruft.yaml  docker.yaml  lint.yaml  pages.yaml  publish.yaml  test.yaml
api-spec/: API_CATALOG.md  openapi.yaml
api-spec/paths/: auth.yaml  equipment.yaml  files-device.yaml  files-web.yaml  schedule.yaml  share.yaml  summary.yaml  system.yaml  user.yaml
docs/: CONTRIBUTING.md  frontend_design.md  frontend_prototype.html  note_processing_design.md  notebook_spec.md  schema_migration_guide.md  summary_api.md
script/: db_revision  extract_test_data.py  print-openapi.py
supernote/: __init__.py  converter.py  decoder.py  fileformat.py  parser.py
supernote/alembic/: env.py
supernote/cli/: admin.py  client.py  cloud.py  main.py  notebook.py  server.py
supernote/client/: __init__.py  admin.py  api.py  auth.py  client.py  cloud_client.py  device.py  extended.py  file.py  login_client.py  web.py
supernote/cloud/: __init__.py
supernote/cmds/: cloud_login_tool.py  supernote_tool.py  user_admin.py
supernote/mcp/: server.py
supernote/models/: README.md  __init__.py  auth.py  base.py  equipment.py  extended.py  file.py  file_web.py  schedule.py  summary.py  system.py  user.py
supernote/notebook/: README.md  __init__.py  converter.py  fileformat.py  parser.py
supernote/server/: ARCHITECTURE.md  (+8 more)
tests/: __init__.py  conftest.py  test_init.py
(+150 files in other folders)
